# CNN_AI

./: .gitignore  ADVANCED_BLOCKS_COMPLETION_REPORT.md  CMakeLists.txt  IMPLEMENTATION_REPORT.md  README.md  subject.md  test_advanced_blocks_functionality.cpp  test_functionality
examples/: advanced_blocks_example.cpp  cnn_example.cpp  main.cpp  test_blocks_compile.cpp
include/cnn/: activation.h  blocks.h  cnn.h  conv2d.h  dropout.h  layer.h  layers.h  linear.h  loss.h  model.h  optimizer.h  pooling.h  tensor.h
src/: activation.cpp  blocks.cpp  conv2d.cpp  dropout.cpp  layers.cpp  linear.cpp  loss.cpp  model.cpp  optimizer.cpp  pooling.cpp  tensor.cpp
tests/: test_advanced_blocks.cpp  test_layers.cpp  test_main.cpp  test_tensor.cpp
